seems like I fixed spacing, will work on Contact Us footer for now

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,6 @@
 	min-width: 1277px;
 }
 #img2 {
-	padding-top: 30px;
 	margin: 0 auto;
 	min-height: 790px;
 	width: 1000px;
@@ -23,6 +22,7 @@
 .section-title {
         text-align: center;
         padding-top: 125px;
+
 }
 #about-us-main {
 	min-height: 590 px;
@@ -34,11 +34,12 @@
     color: white;
 }
 #about {
-	padding-top: 250px;
+	padding-top: 350px;
 }
-.carousel-slide {
-	margin-top: 15px;
-	min-height: 690px;
+#home {
+	padding-top: 51px;
+	/*margin-top: 51px;*/
+	min-height: 790px;
 }
 .footer {
 	background-color: rgb(100, 165, 230);
